# timeseries-db

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  test_optional_darts.py
.github/workflows/: build.yml
docker/init-scripts/: 01-init-timescaledb.sql
tests/: README.md  conftest.py  test_runner.py
tests/integration/: test_bulk_io.py  test_db_integration.py  test_timescaledb_integration.py
tests/mocks/: api_mocks.py
tests/unit/: conftest.py  test_pydantic_decorator.py
tsdb/: version.py
tsdb/connectors/: base.py  duckdb.py  exceptions.py  timescaledb.py  timestream.py
tsdb/core/: darts_decorator.py  pydantic_decorator.py
tsdb/crud/: __init__.py  crud.py  exceptions.py  session.py
tsdb/decorators/: __init__.py  darts_decorator.py  pydantic_decorator.py
tsdb/decoreators/: darts_decorator.py  pydantic_decorator.py
tsdb/examples/: bulk_io_example.py  darts_storage_example.py  multi_backend_example.py  pydantic_duckdb_example_usage.py  pydantic_example_usage.py  sqlmodel_syntax_example.py
tsdb/io/: __init__.py  duckdb.py  protocols.py  timescaledb.py
